# calfkit-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.scaffold.md  ROADMAP.md  codecov.yml  experiment_consumer_after_start.py  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  code-checks.yml  integration-live.yml  integration-real-broker.yml  integration-topic-provisioning.yml  kafka-integration.yml  kafka-marker-tests.yml  lint.yml  mcp-e2e.yml  release.yml  security.yml  test.yml
calf/: __init__.py  atomic_node.py  calf_atomic_node.py  runtime.py  test_runtime.py  types.py
calf/agents/: __init__.py  agent.py  agent_router_runner.py  agent_runner.py  agent_runner_2.py  base_node_runner.py  chat.py  chat_runner.py  lifecycle.py  node_runner.py  tool_runner.py
calf/broker/: __init__.py  broker.py  deployable.py  memory.py  middleware.py
calf/context/: schema.py
calf/contracts/: topics.py
calf/experimental/: rpc_worker.py
calf/group_chat/: __init__.py
calf/memory/: __init__.py
calf/messages/: __init__.py  util.py
calf/models/: event_envelope.py
calf/nodes/: __init__.py  agent_router_node.py  atomic_node.py  base_node.py  base_tool_node.py  chat_node.py  registrator.py  router_node.py
calf/providers/: __init__.py  base.py  openai.py
calf/runners/: node_runner.py
calf/state/: __init__.py  base.py  in-memory.py  types.py
calf/stores/: __init__.py  base.py  in_memory.py  memory.py
calf/tools/: __init__.py
calfkit/: __init__.py  _handle_names.py  _protocol.py  _registry.py  _routing.py  _safe.py  _utils.py  exceptions.py  keying.py  tuning.py
calfkit/_faststream_ext/: __init__.py  _broker.py  _factory.py  _subscriber.py
calfkit/_vendor/: __init__.py  vendor.txt
calfkit/bridges/: mcp.py
calfkit/broker/: __init__.py  broker.py  middleware.py
calfkit/cli/: __init__.py  __main__.py  _chat.py  _chat_io.py  _chat_render.py  _common.py  _dev_agents.py  _dev_broker.py  _dev_probe.py  _dev_state.py  _loader.py  _picker.py  _run.py  _wait.py  chat.py  dev.py  mcp.py  run.py  topics.py
calfkit/client/: __init__.py  _broker.py  _connection.py  _mesh_url.py  base.py  caller.py  client.py  deserialize.py  events.py  gateway.py  hub.py  invocation_handle.py  kafka_config.py  mesh.py  middleware.py  node_result.py  reply_dispatcher.py
calfkit/controlplane/: __init__.py  advert.py  config.py  publisher.py  records.py  view.py
calfkit/dev/: __init__.py
calfkit/experimental/: _types.py  agent_def.py  base_service_client.py  context_models.py  groupchat_router_node.py  node_def.py  payload_model.py  state_and_deps_models.py  tool_def.py  utils.py
calfkit/gates/: __init__.py  base.py  groupchat.py  registry.py
calfkit/mcp/: __init__.py  _adapt.py  _bridge.py  _codegen.py  _config.py  _dedup.py  _factory.py  _server.py  _session.py  _testing.py  _tool_def.py  exceptions.py  mcp.schema.json  mcp_bridge.py  mcp_toolbox.py  mcp_transport.py
calfkit/messages/: __init__.py  util.py  utils.py
calfkit/models/: __init__.py  _coerce.py  actions.py  agents.py  args_schema.py  bounded_queue.py  capability.py  consumer_context.py  envelope.py  error_report.py  event_envelope.py  fanout.py  groupchat.py  handoff.py  marker.py  node_result.py  node_schema.py  payload.py  payloads.py  reply.py  seam_context.py  session_context.py  state.py  step.py  tool_context.py  tool_dispatch.py  types.py
calfkit/nodes/: __init__.py  _fanout_store.py  _peer_directory.py  _projection.py  _seams.py  _steps.py  _tool_error.py  activity.py  agent.py  agent_router_node.py  base.py  base_node.py  base_tool_node.py  chat_node.py  consumer.py  groupchat_router_node.py  node.py  peers.py  registrator.py  tool.py  (+1 more)
docs/: README.md  agent-peers.md  agent-pov-projection.md  api.md  calfkit-v1-design.md  calfkit-v1-dx-review.md  chat-with-agents.md  cli.md  client-features.md  consumer-nodes.md  control-plane-howto.md  control-plane-substrate.md  deps-as-dict-refactor.md  durable-fanout-aggregator.md  error-handling.md  fire-and-forget-emit.md  gating.md  hooks-design.md  local-dev-mesh.md  mcp-adaptor-design.md  mcp-adaptor-implementation-plan.md  mcp-catalog-discovery-plan.md  mcp-discovery-rpc-design.md  mcp-guide.md  mcp-json-schema-reference-design.md  mcp-overview.md  mcp-phase-0-kickoff.md  mcp-tool-discovery.md  mcp-v1-plan.md  multi-agent-support-desk.md  peer-node-pattern-reference.md  peer-node-pattern.md  policy-seams.md  startup-topic-provisioning-design.md  tool-discovery.md  topic-provisioning.md  worker-lifecycle.md
examples/: README.md  agent_dispatcher.py  calf_client_connection.py  chat_agent.py  chat_node.py  chat_repl_cli.py  invoke_agent.py  location_agent.py  question_graph.py  router_node.py  rpc_worker.py  run_calf_node.py  tool_nodes.py  topic_provisioning.py
scratch/: mcp_client_tutorial.py
scripts/: test_decorator_inheritance.py  test_filter_routing.py  test_generic_deser.py  test_generic_method.py  test_generic_resolution.py  test_handler_override.py  test_name_registry.py  test_orig_class.py  test_type_adapter.py  test_typevar_resolve.py
tests/: _broker_fakes.py  _capability_fakes.py  _dev_fakes.py  _fanout_fakes.py  _peer_fakes.py  _provisioning_fakes.py  conftest.py  dev_agents_nodes.py  fakes.py  providers.py  provisioning_cli_import_boom.py  provisioning_cli_nodes.py  test_agent_card_advert.py  test_agent_concurrent_tool_calls.py  test_agent_ctor_identity.py  test_agent_loop_integration.py  test_agent_runner.py  test_agent_unit.py  test_agents_models.py  test_aggregator_errors.py  test_aggregator_inmemory.py  test_aggregator_setup.py  test_aggregator_state.py  test_args_schema.py  test_broker.py  test_call_marker.py  test_caller_surface_client.py  test_caller_surface_hub.py  test_caller_surface_types.py  test_callframe_fanout_id.py  test_capability_models.py  test_carriage_switch_e2e.py  test_chat_agent.py  test_chat_cli.py  test_chat_io.py  test_chat_render.py  test_chat_runner.py  test_chat_session.py  test_client_author.py  test_client_base.py  (+167 more)
(+385 files in other folders)
