[project]
name = "calfkit"
version = "0.5.1"
description = "Build AI workflows and agents as fully-distributed and event-driven microservices."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Ryan Yu" }]
keywords = ["ai", "agents", "kafka", "event-driven", "workflows", "llm", "distributed", "decoupled"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

dependencies = [
    "faststream[kafka]>=0.6.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uuid-utils>=0.14.0",
    # Vendored pydantic-ai dependencies (from pydantic-ai-slim v1.47.0)
    "httpx>=0.27",
    # griffe pin bumped to >=2.0 during MCP v1 Phase 0: griffe 1.15.0 ships a
    # broken wheel with no top-level __init__.py, causing `from griffe import
    # Docstring` in calfkit/_vendor/pydantic_ai/_griffe.py to fail. griffe 2.x
    # restores the symbol and is API-compatible with the vendored code.
    "griffe>=2.0,<3",
    "typing-inspection>=0.4.0",
    "opentelemetry-api>=1.28.0",
    "genai-prices>=0.0.48",
    "pydantic-graph>=1.47.0",
    "exceptiongroup>=1.2.2; python_version < '3.11'",
    # Provider SDKs
    "openai>=1.0.0",
    "anthropic>=0.80.0",
    "typing-extensions>=4.15.0",
    "dishka>=1.9.1",
    # MCP (Model Context Protocol) — used by calfkit/mcp/* adaptor.
    # Pin <2 to gate out major bumps; rename of streamablehttp_client in 1.20
    # is the reason for the lower bound.
    "mcp>=1.20.0,<2",
]

[project.urls]
Homepage = "https://github.com/calf-ai/calfkit-sdk"
Repository = "https://github.com/calf-ai/calfkit-sdk"
Issues = "https://github.com/calf-ai/calfkit-sdk/issues"

[project.scripts]
# Top-level calfkit CLI. Mounts the `mcp` (codegen / schema) and `topics`
# (provision) subcommands. Requires the `cli` optional extra (typer); the
# entry-point's importer surfaces a clear remediation message if typer isn't
# installed.
calfkit = "calfkit.cli:main"

[project.optional-dependencies]
dev = []
# Installed via `pip install calfkit[cli]`. Off the critical install path
# because the CLI is only invoked at schema-generation / provisioning /
# dev-run time, not at library runtime. Gates the whole `calfkit` console
# script (typer); `watchfiles` powers `calfkit run --reload`.
cli = ["typer>=0.12", "watchfiles>=0.21"]
# Backwards-compatible alias for the original extra name; resolves to the same
# typer dependency via `calfkit[cli]`.
mcp-codegen = ["calfkit[cli]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calfkit"]

[tool.ruff]
target-version = "py310"
line-length = 150
exclude = ["calfkit/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["calfkit/_vendor"]

[tool.coverage.run]
omit = ["calfkit/_vendor/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "faker>=40.12.0",
    "fastapi>=0.129.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "rich>=14.3.2",
    "ruff>=0.14.11",
    "temporalio>=1.23.0",
    # typer is the dep for the `cli` optional extra; dev includes it
    # so the CLI tests can run against the same install.
    "typer>=0.12",
    # watchfiles powers `calfkit run --reload`; dev includes it so the
    # CLI reload tests can import and patch it.
    "watchfiles>=0.21",
]
examples = [
    "plotext>=5.3.2",
    "sympy>=1.13",
    "websockets>=16.0",
]
